--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <header>
-    <img src="C:\Users\saisa\Downloads\DSC_0701 (1).jpg"alt="Developer Image" class="developer-image">
+    <img src="./DSC_0701 (1).jpg"alt="Developer Image" class="developer-image">
     <div class="header-content">
       <h1>Sai Saran</h1>
     </div>
@@ -29,7 +29,7 @@
     <p>Frontend Developer</p>
        
     <div class="Resume">
-      <a href="C:\Users\saisa\Downloads\A Sai Saran-cap05_240-Frontend Developer(React).pdf" target="_blank" download="YourResume.pdf">
+      <a href="https://test-resume.masaischool.com/dashboard/profile/?resumeId=6567531670fde25ef18a573c&profileId=self&selectedTemplate=TwoColumnMinimal" target="_blank" download="YourResume.pdf">
         <button>Resume</button>
       </a>
 
@@ -95,7 +95,7 @@
     <h2>Projects</h2>
     <div class="project-container">
       <div class="project">
-        <img src="C:\Users\saisa\OneDrive\Pictures\Screenshots\Screenshot (2).png" alt="Project 1">
+        <img src="./Screenshot (2).png" alt="Project 1">
         <p>
             <ul>
                 <li>Replica of Shapelink fitness platform</li>
